# Epibench

./: .gitignore  README.md  USAGE.md  pyproject.toml
data/reference_answers/: SCHEMA.md  T01.json  T02.json  T03.json  T04.json  T05.json  T06.json  T07.json  T08.json  T09.json  T10.json  T11.json  T12.json  T13.json  T14.json  T15.json  T16.json  T17.json  T18.json  T19.json  T20.json  T21.json
src/epibench/: __init__.py  cli.py  config.py  runner.py  storage.py  tasks.py
src/epibench/models/: __init__.py  anthropic_backend.py  base.py  gemini_backend.py  openai_backend.py
src/epibench/scoring/: __init__.py  auto.py  reference.py  rubric.py
tests/: test_auto_score.py  test_models_spec.py  test_runner.py  test_scoring.py  test_tasks.py
